Add tooltip. Remove iscroll legacy

--- a/styles/articles.less
+++ b/styles/articles.less
@@ -42,7 +42,7 @@
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
-    padding: 10% 10% 75px 10%;
+    padding: 20px 20px 85px 20px;
     border-radius: 10px 10px 0 0;
 
     & > * {
@@ -70,21 +70,12 @@
   }
 }
 
-.iscroll .article .article-content {
-  padding-bottom: 500px;
-  padding-bottom: 50vh;
-}
-
-.no-iscroll .article .article-content {
-  padding: 20px 20px 85px 20px;
-}
-
 @media (min-width: @screen-md-min) {
   .article {
     padding: 5%;
   }
 
-  .no-iscroll .article .article-content {
+  .article .article-content {
     padding: 30px 30px 85px 30px;
   }
 }
