--- a/styles/colors.less
+++ b/styles/colors.less
@@ -113,6 +113,10 @@
 .color-steelblue { background-color: @color-steelblue; }
 .color-fountainblue { background-color: @color-fountainblue; }
 
+// BRANDING
+@color-main: @color-jade;
+.color-main { background-color: @color-main; }
+
 .article-color(@name) {
   background-color: @@name;
 
