--- a/styles/global.less
+++ b/styles/global.less
@@ -29,15 +29,10 @@ body {
 }
 
 #content {
-  -webkit-overflow-scrolling: touch;
-}
-
-.content {
   width: 100%;
-}
-
-.no-iscroll .content {
   height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .main-title {
