--- a/styles/app.less
+++ b/styles/app.less
@@ -3,6 +3,7 @@
 @import (reference) "bootstrap/less/mixins";
 @import (reference) "mixins";
 @import (inline) "blueimp-gallery/css/blueimp-gallery.min.css";
+@import (inline) "tooltipster/css/tooltipster.css";
 
 @import "font-awesome/less/font-awesome";
 @fa-font-path: "./fonts";
@@ -18,6 +19,6 @@
 @import "places";
 @import "map-top";
 @import "maps";
-@import "iscroll";
 @import "spinner";
 @import "footer";
+@import "tooltip";
