--- a/styles/articles.less
+++ b/styles/articles.less
@@ -80,6 +80,18 @@
   }
 }
 
+.article-summary {
+  .summary {
+    position: relative;
+  }
+
+  .article-new {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+}
+
 .fullscreen .article-summary {
   display: flex;
   align-items: center;
@@ -162,58 +174,58 @@
     }
   }
 
-  &.color-plum { .article-color('color-plum'); }
-  &.color-seance { .article-color('color-seance'); }
-  &.color-studio { .article-color('color-studio'); }
-  &.color-wisteria { .article-color('color-wisteria'); }
-  &.color-pomegranate { .article-color('color-pomegranate'); }
-  &.color-sunglo { .article-color('color-sunglo'); }
-  &.color-thunderbird { .article-color('color-thunderbird'); }
-  &.color-oldbrick { .article-color('color-oldbrick'); }
-  &.color-flamingo { .article-color('color-flamingo'); }
-  &.color-valencia { .article-color('color-valencia'); }
-  &.color-tallpoppy { .article-color('color-tallpoppy'); }
-  &.color-monza { .article-color('color-monza'); }
-  &.color-cinnabar { .article-color('color-cinnabar'); }
-  &.color-tahitigold { .article-color('color-tahitigold'); }
-  &.color-casablanca { .article-color('color-casablanca'); }
-  &.color-crusta { .article-color('color-crusta'); }
-  &.color-burntorange { .article-color('color-burntorange'); }
-  &.color-buttercup { .article-color('color-buttercup'); }
-  &.color-ecstasy { .article-color('color-ecstasy'); }
-  &.color-jaffa { .article-color('color-jaffa'); }
-  &.color-zest { .article-color('color-zest'); }
-  &.color-firebush { .article-color('color-firebush'); }
-  &.color-downy { .article-color('color-downy'); }
-  &.color-mountainmeadowlight { .article-color('color-mountainmeadowlight'); }
-  &.color-lightgreensea { .article-color('color-lightgreensea'); }
-  &.color-turquoise { .article-color('color-turquoise'); }
-  &.color-observatory { .article-color('color-observatory'); }
-  &.color-shamrock { .article-color('color-shamrock'); }
-  &.color-mountainmeadow { .article-color('color-mountainmeadow'); }
-  &.color-emeral { .article-color('color-emeral'); }
-  &.color-greenhaze { .article-color('color-greenhaze'); }
-  &.color-junglegreen { .article-color('color-junglegreen'); }
-  &.color-freespeechaquamarine { .article-color('color-freespeechaquamarine'); }
-  &.color-jade { .article-color('color-jade'); }
-  &.color-salem { .article-color('color-salem'); }
-  &.color-eucalyptus { .article-color('color-eucalyptus'); }
-  &.color-pictonblue { .article-color('color-pictonblue'); }
-  &.color-shakespeare { .article-color('color-shakespeare'); }
-  &.color-curiousblue { .article-color('color-curiousblue'); }
-  &.color-madison { .article-color('color-madison'); }
-  &.color-jordyblue { .article-color('color-jordyblue'); }
-  &.color-dodgerblue { .article-color('color-dodgerblue'); }
-  &.color-ming { .article-color('color-ming'); }
-  &.color-ebonyclay { .article-color('color-ebonyclay'); }
-  &.color-malibu { .article-color('color-malibu'); }
-  &.color-chambray { .article-color('color-chambray'); }
-  &.color-pickledbluewood { .article-color('color-pickledbluewood'); }
-  &.color-hoki { .article-color('color-hoki'); }
-  &.color-jellybean { .article-color('color-jellybean'); }
-  &.color-jacksonpurple { .article-color('color-jacksonpurple'); }
-  &.color-steelblue { .article-color('color-steelblue'); }
-  &.color-fountainblue { .article-color('color-fountainblue'); }
+  &.color-plum { .article-color('plum'); }
+  &.color-seance { .article-color('seance'); }
+  &.color-studio { .article-color('studio'); }
+  &.color-wisteria { .article-color('wisteria'); }
+  &.color-pomegranate { .article-color('pomegranate'); }
+  &.color-sunglo { .article-color('sunglo'); }
+  &.color-thunderbird { .article-color('thunderbird'); }
+  &.color-oldbrick { .article-color('oldbrick'); }
+  &.color-flamingo { .article-color('flamingo'); }
+  &.color-valencia { .article-color('valencia'); }
+  &.color-tallpoppy { .article-color('tallpoppy'); }
+  &.color-monza { .article-color('monza'); }
+  &.color-cinnabar { .article-color('cinnabar'); }
+  &.color-tahitigold { .article-color('tahitigold'); }
+  &.color-casablanca { .article-color('casablanca'); }
+  &.color-crusta { .article-color('crusta'); }
+  &.color-burntorange { .article-color('burntorange'); }
+  &.color-buttercup { .article-color('buttercup'); }
+  &.color-ecstasy { .article-color('ecstasy'); }
+  &.color-jaffa { .article-color('jaffa'); }
+  &.color-zest { .article-color('zest'); }
+  &.color-firebush { .article-color('firebush'); }
+  &.color-downy { .article-color('downy'); }
+  &.color-mountainmeadowlight { .article-color('mountainmeadowlight'); }
+  &.color-lightgreensea { .article-color('lightgreensea'); }
+  &.color-turquoise { .article-color('turquoise'); }
+  &.color-observatory { .article-color('observatory'); }
+  &.color-shamrock { .article-color('shamrock'); }
+  &.color-mountainmeadow { .article-color('mountainmeadow'); }
+  &.color-emeral { .article-color('emeral'); }
+  &.color-greenhaze { .article-color('greenhaze'); }
+  &.color-junglegreen { .article-color('junglegreen'); }
+  &.color-freespeechaquamarine { .article-color('freespeechaquamarine'); }
+  &.color-jade { .article-color('jade'); }
+  &.color-salem { .article-color('salem'); }
+  &.color-eucalyptus { .article-color('eucalyptus'); }
+  &.color-pictonblue { .article-color('pictonblue'); }
+  &.color-shakespeare { .article-color('shakespeare'); }
+  &.color-curiousblue { .article-color('curiousblue'); }
+  &.color-madison { .article-color('madison'); }
+  &.color-jordyblue { .article-color('jordyblue'); }
+  &.color-dodgerblue { .article-color('dodgerblue'); }
+  &.color-ming { .article-color('ming'); }
+  &.color-ebonyclay { .article-color('ebonyclay'); }
+  &.color-malibu { .article-color('malibu'); }
+  &.color-chambray { .article-color('chambray'); }
+  &.color-pickledbluewood { .article-color('pickledbluewood'); }
+  &.color-hoki { .article-color('hoki'); }
+  &.color-jellybean { .article-color('jellybean'); }
+  &.color-jacksonpurple { .article-color('jacksonpurple'); }
+  &.color-steelblue { .article-color('steelblue'); }
+  &.color-fountainblue { .article-color('fountainblue'); }
 }
 
 @media (min-width: @screen-md-min) {
