Improve GA, build and mobile

--- a/styles/app.less
+++ b/styles/app.less
@@ -6,7 +6,7 @@
 @import (inline) "tooltipster/css/tooltipster.css";
 
 @import "font-awesome/less/font-awesome";
-@fa-font-path: "./fonts";
+@fa-font-path: "./fonts/font-awesome";
 
 @import "colors";
 @import "global";
