--- a/styles/articles.less
+++ b/styles/articles.less
@@ -92,6 +92,12 @@
   }
 }
 
+@media (max-width: @screen-sm-max) {
+  .article-summary {
+    background-image: none !important;
+  }
+}
+
 .fullscreen .article-summary {
   display: flex;
   align-items: center;
@@ -99,7 +105,7 @@
   min-height: 100%;
 
   .summary {
-    padding: 30px;
+    padding: 30px 15px;
 
     h1, .title {
       margin-top: 0;
@@ -229,8 +235,12 @@
 }
 
 @media (min-width: @screen-md-min) {
-  .fullscreen .article-summary .summary .btn {
-    width: auto;
+  .fullscreen .article-summary .summary {
+    padding: 30px;
+
+    .btn {
+      width: auto;
+    }
   }
 }
 
