--- a/templates/home.hbs
+++ b/templates/home.hbs
@@ -1,7 +1,7 @@
 <h1 class="main-title">Farewell...</h1>
 
 {{#each articles}}
-  <div id="{{reference.type}}-{{reference.id}}" class="article-summary {{classes}}"{{#if style}} style="{{style}}"{{/if}}>
+  <div id="{{reference.type}}-{{reference.id}}" class="article-summary {{classes}}"{{{attributes}}}>
     <div class="illustration" style="{{illustrationStyle}}')"></div>
     <div class="summary" style="{{summaryStyle}}">
       {{#if isNew}}
@@ -10,7 +10,7 @@
       {{{title}}}
       <div class="description">
         {{{description}}}
-        <button type="button" class="btn" data-article-id="{{reference.id}}"{{#if colors}} style="background-color:{{colors.lighten}};border-color:{{colors.primary}};"{{/if}}>Lire la suite...</button>
+        <button type="button" class="btn" data-article-id="{{reference.id}}">Lire la suite...</button>
       </div>
     </div>
   </div>
