Correct bug: no scroll on feedback

--- a/styles/feedback.less
+++ b/styles/feedback.less
@@ -1,4 +1,7 @@
 #aside-feedback {
+  overflow-x: hidden;
+  overflow-y: auto;
+
   .disqus-thread {
     padding: 30px 30px 75px 30px;
     max-width: 800px;
