Better lightbox and carousel support

--- a/styles/app.less
+++ b/styles/app.less
@@ -4,6 +4,7 @@
 @import (reference) "mixins";
 @import (inline) "blueimp-gallery/css/blueimp-gallery.min.css";
 @import (inline) "tooltipster/css/tooltipster.css";
+@import (inline) "slick-carousel/slick/slick.css";
 
 @import "font-awesome/less/font-awesome";
 @fa-font-path: "./fonts/font-awesome";
