--- a/styles/spinner.less
+++ b/styles/spinner.less
@@ -5,9 +5,12 @@
 @spinner-width: .5em;
 
 .loader {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  .flex-display();
+  .align-items(center);
+  .justify-content(center);
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
   .cover-mask();
 
   .spinner {
