--- a/styles/articles.less
+++ b/styles/articles.less
@@ -13,6 +13,7 @@
   display: block;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
 }
 
 .article {
@@ -32,6 +33,7 @@
     display: block;
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
   }
 
   .article-content {
@@ -176,6 +178,7 @@
   &.image-template-full {
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
     padding: 10%;
 
     .illustration { display: none; }
@@ -234,6 +237,7 @@
     .illustration {
       background-size: cover;
       background-repeat: no-repeat;
+      background-position: center;
     }
   }
 
@@ -241,6 +245,7 @@
     .illustration {
       background-size: cover;
       background-repeat: no-repeat;
+      background-position: center;
     }
   }
 
@@ -323,6 +328,7 @@
     display: block;
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
   }
 
   .summary {
