--- a/styles/articles.less
+++ b/styles/articles.less
@@ -131,7 +131,8 @@
   }
 
   .article .article-content {
-    padding: 30px 30px 85px 30px;
+    max-width: 850px;
+    padding: 30px 50px 85px 50px;
   }
 }
 
