Display author and date

--- a/styles/articles.less
+++ b/styles/articles.less
@@ -167,6 +167,11 @@
 
     h1, .title {
       margin-top: 0;
+      margin-bottom: 5px;
+    }
+
+    .date {
+      font-weight: bold;
     }
 
     .btn {
