--- a/styles/colors.less
+++ b/styles/colors.less
@@ -215,6 +215,10 @@
     background-color: fadeout(@@color-name, 30%);
   }
 
+  figcaption {
+    background-color: @@color-name;
+  }
+
   .slick-prev::before, .slick-next::before {
     color: @@color-name;
   }
