--- a/styles/articles.less
+++ b/styles/articles.less
@@ -86,9 +86,15 @@
     }
 
     img {
-      max-width: 100%;
+      width: 100%;
       display: block;
       margin: 0 auto;
+    }
+
+    figcaption {
+      color: white;
+      padding: 0.3em 0.5em;
+      font-weight: bold;
     }
   }
 
