--- a/styles/articles.less
+++ b/styles/articles.less
@@ -218,11 +218,11 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    padding: 10%;
+    padding: 5%;
 
     .illustration { display: none; }
 
-    &.text-position-left, &.text-position-right, &.text-position-right, &.text-position-bottom {
+    &.text-position-left, &.text-position-right, &.text-position-top, &.text-position-bottom {
       .summary {
         max-width: 600px;
       }
