--- a/styles/articles.less
+++ b/styles/articles.less
@@ -25,6 +25,11 @@
   width: 100%;
   height: 100%;
 
+  [data-oembed] iframe {
+    display: block;
+    margin: 0 auto;
+  }
+
   .illustration {
     position: absolute;
     top: 0;
