Improve design a bit

--- a/styles/articles.less
+++ b/styles/articles.less
@@ -81,13 +81,20 @@
       margin-top: 0;
     }
 
+    p,
+    a[data-lightbox],
+    .blueimp-gallery-carousel,
+    [data-oembed] {
+      margin: 3em 0 0 0;
+      margin: 3rem 0 0 0;
+    }
+
     p {
       text-align: justify;
     }
 
     a[data-lightbox] {
       display: block;
-      margin: 1rem 0;
     }
 
     img {
