--- a/styles/global.less
+++ b/styles/global.less
@@ -61,6 +61,10 @@ a[data-lightbox] {
   cursor: pointer;
 }
 
+.blueimp-gallery {
+  background-color: rgba(0, 0, 0, .95);
+}
+
 .blueimp-gallery-carousel {
   cursor: pointer;
 }
